# microREST

./: CMakeLists.txt  readme.md
example/: CMakeLists.txt  readme.md
example/assets/: insomnia_microrest.yaml
example/src/: main.cpp
include/micronet/http/: Header.hpp  Request.hpp  Response.hpp  Route.hpp  Router.hpp
include/micronet/http/enums/: Headers.hpp  Method.hpp  Version.hpp
include/micronet/socket/: ClientSocket.hpp  ServerSocket.hpp
src/http/: Request.cpp  Response.cpp  Router.cpp
src/http/enums/: Headers.cpp  Method.cpp  Version.cpp
src/socket/: ClientSocket.cpp  ServerSocket.cpp
